5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1679_1099.log
== TEST (2019-04-23 17:38:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b or b==c or a==c):
	print(tt , equilatero)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(tt , equilatero)
NameError: name 'equilatero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:38:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b or b==c or a==c):
	print(tt , "equilatero")



-- OUTPUT:
Tipo do Triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:41:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	elif(a>b or b>c or a>c):
		print(tt , "isosceles")



-- ERROR:
File "XXXX", line 11
    elif(a>b or b>c or a>c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:42:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	elif:
		(a>b or b>c or a>c)
		print(tt , "isosceles")



-- ERROR:
File "XXXX", line 11
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:42:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	elif:
		(a>b or b>c or a>c)
		print(tt , "isosceles")



-- ERROR:
File "XXXX", line 11
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:42:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")



-- ERROR:
File "XXXX", line 11
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:44:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	if (a==b or b==c or a==c):
		print(tt , "isosceles")



-- ERROR:
File "XXXX", line 11
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:44:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	if (a==b or b==c or a==c):
		print(tt , "isosceles")



-- ERROR:
File "XXXX", line 11
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:47:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	if (a==b or b==c or a==c):
		print(tt , "isosceles")
		
		if(a != b and b != c and a !=c):
			print(tt , "invalido")
			
			else: 
				print(tt , "escaleno")



-- ERROR:
File "XXXX", line 17
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:47:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	if (a==b or b==c or a==c):
		print(tt , "isosceles")
		
		if(a != b and b != c and a !=c):
			print(tt , "invalido")
			
		else: 
			print(tt , "escaleno")



-- ERROR:
File "XXXX", line 17
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:04:40) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	if (a==b or b==c or a==c):
		print(tt , "isosceles")
		
		elif (a != b and b != c and a !=c):
			print(tt , "escaleno")
			
	else: 
		print(tt , "equilatero")
		
else:
	print(tt, 'isosceles')
			
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:05:01) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	if (a==b or b==c or a==c):
		print(tt , "isosceles")
		
		elif (a != b and b != c and a !=c):
			print(tt , "escaleno")
			
	else: 
		print(tt , "equilatero")
		
else:
	print(tt, 'isosceles')
			
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:05:19) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	if (a==b or b==c or a==c):
		print(tt , "isosceles")
		
		elif (a != b and b != c and a !=c):
			print(tt , "escaleno")
			
	else: 
		print(tt , "equilatero")
		
else:
	print(tt, 'isosceles')
			
    


-- EXECUTION TIME:
0.148887
-- ERROR:
  File "/home/codebench/codes/1679/1099/main.py", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:05:20) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a==b and b==c and a==c):
	print(tt , "equilatero")
	
	if (a==b or b==c or a==c):
		print(tt , "isosceles")
		
		elif (a != b and b != c and a !=c):
			print(tt , "escaleno")
			
	else: 
		print(tt , "equilatero")
		
else:
	print(tt, 'isosceles')
			
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:06:51) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if ((a==b) and (b==c) and (a==c)):
	print(tt , "equilatero")
	
	if (a==b or b==c or a==c):
		print(tt , "isosceles")
		
		elif (a != b and b != c and a !=c):
			print(tt , "escaleno")
			
	else: 
		print(tt , "equilatero")
		
else:
	print(tt, 'isosceles')
			
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:07:54) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if ((a==b) and (b==c) and (a==c)):
	print(tt , "equilatero")
	
	if (a==b or b==c or a==c):
		print(tt , "isosceles")
		
		elif (a != b and b != c and a !=c):
			print(tt , "escaleno")
			
	else: 
		print(tt , "equilatero")
		
else:
	print(tt, 'isosceles')
			
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:08:25) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")


    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:12:06) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a == b and a ==c and b ==c):
	print(tt, 'equilatero')
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:12:23) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a == b and a ==c and b ==c):
	print(tt, 'equilatero')
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:16:34) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a == b and a ==c and b ==c):
	print(tt, 'equilatero')
	
	if(a != b or a != c or b != c):
		print(tt, 'isosceles')
		
		if(a != b and a != c and b != c):
			print(tt, 'escaleno')
			
			
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:16:52) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a == b and a ==c and b ==c):
	print(tt, 'equilatero')
	
	if(a != b or a != c or b != c):
		print(tt, 'isosceles')
		
		if(a != b and a != c and b != c):
			print(tt, 'escaleno')
			
			
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:17:40) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a == b and a ==c and b ==c):
	print(tt, 'equilatero')
	
	if(a != b or a != c or b != c):
		print(tt, 'isosceles')
		
		if(a != b and a != c and b != c):
			print(tt, 'escaleno')
			
			
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:18:21) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a == b and a ==c and b ==c):
	print(tt, 'equilatero')
	
	if(a != b or a != c or b != c):
		print(tt, 'isosceles')
		
		if(a != b and a != c and b != c):
			print(tt, 'escaleno')
			
			
    


-- ERROR:
File "XXXX", line 12
    elif (a != b and b != c and a !=c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:20:32) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a == b and a ==c and b ==c):
	print(tt, 'equilatero')
	
	if(a != b or a != c or b != c):
		print(tt, 'isosceles')
		
		if(a != b and a != c and b != c):
			print(tt, 'escaleno')
			
			else:
				print(tt, 'isosceles')
    


-- ERROR:
File "XXXX", line 15
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:29:03) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a > 0 and b > 0 and c > 0):
	if(a+b>c and a+c>b and a+b>a):
		if(a == b and b == c):
			print(tt, 'equilatero')
			elif (a ==b or b == c or a == c):
			else:
				print(tt, 'isosceles')
		else:
			print(tt, 'escaleno')
	else:
		print(tt, 'invalido')
else:
	print(tt, 'invalido')
			
			
    


-- ERROR:
File "XXXX", line 10
    elif (a ==b or b == c or a == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:29:07) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a > 0 and b > 0 and c > 0):
	if(a+b>c and a+c>b and a+b>a):
		if(a == b and b == c):
			print(tt, 'equilatero')
			elif (a ==b or b == c or a == c):
			else:
				print(tt, 'isosceles')
		else:
			print(tt, 'escaleno')
	else:
		print(tt, 'invalido')
else:
	print(tt, 'invalido')
			
			
    


-- EXECUTION TIME:
0.130432
-- ERROR:
  File "/home/codebench/codes/1679/1099/main.py", line 10
    elif (a ==b or b == c or a == c):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:29:44) 
-- CODE:
from math import*

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a > 0 and b > 0 and c > 0):
	if (a+b>c and a+c>b and a+b>a):
		if (a == b and b == c):
			print(tt, 'equilatero')
			
			elif (a ==b or b == c or a == c):
			else:
				print(tt, 'isosceles')
		else:
			print(tt, 'escaleno')
	else:
		print(tt, 'invalido')
else:
	print(tt, 'invalido')
			
			
    


-- ERROR:
File "XXXX", line 13
    elif (a ==b or b == c or a == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:31:49) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a > 0 and b > 0 and c > 0):
	if (a + b > c and a + c > b and a + b > a):
		if (a == b and b == c):
			
			elif (a ==b or b == c or a == c):
				print(tt, 'equilatero')
			else:
				print(tt, 'isosceles')
		else:
			print(tt, 'escaleno')
	else:
		print(tt, 'invalido')
else:
	print(tt, 'invalido')
			
			
    


-- ERROR:
File "XXXX", line 12
    elif (a ==b or b == c or a == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:33:46) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a > 0 and b > 0 and c > 0):
	if (a + b > c and a + c > b and a + b > a):
		if (a == b and b == c):
			print(tt, 'equilatero')
			elif (a == b or b == c or a == c):
				print(tt, 'isosceles')
			else:
				print(tt, 'escaleno')
		else:
			print(tt, 'invalido')
	else:
		print(tt, 'invalido')

			
			
    


-- ERROR:
File "XXXX", line 12
    elif (a == b or b == c or a == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:35:18) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (a > 0 and b > 0 and c > 0):
	
	if (a + b > c and a + c > b and a + b > a):
		
		if (a == b and b == c):
			
			print(tt, 'equilatero')
			
			elif (a == b or b == c or a == c):
				
				print(tt, 'isosceles')
				
			else:
				
				print(tt, 'escaleno')
		else:
			
			print(tt, 'invalido')
	else:
		
		print(tt, 'invalido')

			
			
    


-- ERROR:
File "XXXX", line 16
    elif (a == b or b == c or a == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:47:09) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")



			
			
    


-- ERROR:
File "XXXX", line 16
    elif (a == b or b == c or a == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:06:48) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if ( a < 0 or b < 0 or c < 0):
	print(tt, 'invalido')
	
	elif(a == c and b == c):
		print(tt, 'equilatero')
		
	elif(a == c or b == c):
		print(tt, 'isosceles')
		
	elif(a != b and b != c):
		print(tt, 'escaleno')
		
 

			
			
    


-- ERROR:
File "XXXX", line 11
    elif(a == c and b == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:08:39) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print(tt, 'invalido')
	
	elif (a== c and b == c):
		print(tt, 'equilatero')
		
	elif (a== c or b == c):
		print(tt, 'isosceles')
		
	elif (a!= b and b != c):
		print(tt, 'escaleno')
		
 

			
			
    


-- ERROR:
File "XXXX", line 11
    elif (a== c and b == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:09:20) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print(tt, 'invalido')
	
	elif (a== c and b == c):
		print(tt, 'equilatero')
		
	elif (a== c or b == c):
		print(tt, 'isosceles')
		
	elif (a!= b and b != c):
		print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- ERROR:
File "XXXX", line 11
    elif (a== c and b == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:09:20) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print(tt, 'invalido')
	
	elif (a== c and b == c):
		print(tt, 'equilatero')
		
	elif (a== c or b == c):
		print(tt, 'isosceles')
		
	elif (a!= b and b != c):
		print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- ERROR:
File "XXXX", line 11
    elif (a== c and b == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:09:20) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print(tt, 'invalido')
	
	elif (a== c and b == c):
		print(tt, 'equilatero')
		
	elif (a== c or b == c):
		print(tt, 'isosceles')
		
	elif (a!= b and b != c):
		print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- ERROR:
File "XXXX", line 11
    elif (a== c and b == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:09:42) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print(tt, 'invalido')
	
	elif (a== c and b == c):
		print(tt, 'equilatero')
		
	elif (a== c or b == c):
		print(tt, 'isosceles')
		
	elif (a!= b and b != c):
		print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- ERROR:
File "XXXX", line 11
    elif (a== c and b == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:11:26) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print('invalido')
	
	elif (a== c and b == c):
		print('equilatero')
		
	elif (a== c or b == c):
		print('isosceles')
		
	elif (a!= b and b != c):
		print('escaleno')
		
else:
	print('invalido')
		
 

			
			
    


-- ERROR:
File "XXXX", line 11
    elif (a== c and b == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:13:01) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print('invalido')
	
	elif (a== c and b == c):
		print(tt, 'equilatero')
		
	elif (a== c or b == c):
		print(tt, 'isosceles')
		
	elif (a!= b and b != c):
		print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- EXECUTION TIME:
0.220497
-- ERROR:
  File "/home/codebench/codes/1679/1099/main.py", line 11
    elif (a== c and b == c):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:13:02) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print('invalido')
	
	elif (a== c and b == c):
		print(tt, 'equilatero')
		
	elif (a== c or b == c):
		print(tt, 'isosceles')
		
	elif (a!= b and b != c):
		print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- ERROR:
File "XXXX", line 11
    elif (a== c and b == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:06:02) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print('invalido')
	
	elif (a== c and b == c):
		print(tt, 'equilatero')
		
	elif (a== c or b == c):
		print(tt, 'isosceles')
		
	elif (a!= b and b != c):
		print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- ERROR:
File "XXXX", line 11
    elif (a== c and b == c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:06:25) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print('invalido')
	
elif (a== c and b == c):
	print(tt, 'equilatero')
		
elif (a== c or b == c):
	print(tt, 'isosceles')
		
elif (a!= b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- OUTPUT:
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:06:27) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print('invalido')
	
elif (a== c and b == c):
	print(tt, 'equilatero')
		
elif (a== c or b == c):
	print(tt, 'isosceles')
		
elif (a!= b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- EXECUTION TIME:
0.14969
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Tipo do Triangulo: escaleno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:06:29) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print('invalido')
	
elif (a== c and b == c):
	print(tt, 'equilatero')
		
elif (a== c or b == c):
	print(tt, 'isosceles')
		
elif (a!= b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- OUTPUT:
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:10:07) 
-- CODE:
from math import* 

a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
tt= ("Tipo do Triangulo:")

if (( a < 0 or b < 0 or c < 0) or (a + b > c and a + c > b and b + c > a)):
	print('invalido')
	
elif (a== c and b == c):
	print(tt, 'equilatero')
		
elif (a== c or b == c):
	print(tt, 'isosceles')
		
elif (a!= b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- OUTPUT:
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:39:41) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)
tt= ("Tipo de triangulo")
if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif (a== c and b == c):
	print(tt, 'equilatero')
		
elif (a== c or b == c):
	print(tt, 'isosceles')
		
elif (a!= b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:39:42) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)
tt= ("Tipo de triangulo")
if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif (a== c and b == c):
	print(tt, 'equilatero')
		
elif (a== c or b == c):
	print(tt, 'isosceles')
		
elif (a!= b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- EXECUTION TIME:
0.145374
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo  de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:39:43) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)
tt= ("Tipo de triangulo")
if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif (a== c and b == c):
	print(tt, 'equilatero')
		
elif (a== c or b == c):
	print(tt, 'isosceles')
		
elif (a!= b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:41:21) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)
tt= ("Tipo de triangulo")
if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif ((a == c) and (b == c)):
	print(tt, 'equilatero')
		
elif ((a == c) or (b == c)):
	print(tt, 'isosceles')
		
elif (a != b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- EXECUTION TIME:
0.224716
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo  de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:41:22) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)
tt= ("Tipo de triangulo")
if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif ((a == c) and (b == c)):
	print(tt, 'equilatero')
		
elif ((a == c) or (b == c)):
	print(tt, 'isosceles')
		
elif (a != b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:42:23) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)
tt= ("Tipo de triangulo")
if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif ((a == b) and (b == c)):
	print(tt, 'equilatero')
		
elif ((a == b) or (b == c)):
	print(tt, 'isosceles')
		
elif (a != b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- EXECUTION TIME:
0.199626
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo  de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:42:24) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)
tt= ("Tipo de triangulo")
if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif ((a == b) and (b == c)):
	print(tt, 'equilatero')
		
elif ((a == b) or (b == c)):
	print(tt, 'isosceles')
		
elif (a != b and b != c):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:44:16) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)
tt= ("Tipo de triangulo")
if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif ((a == b) and (b == c)):
	print(tt, 'equilatero')
		
elif ((a == b) or (b == c)):
	print(tt, 'isosceles')
		
elif ((a != b) and (b != c) and (c != a)):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:44:17) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)
tt= ("Tipo de triangulo")
if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif ((a == b) and (b == c)):
	print(tt, 'equilatero')
		
elif ((a == b) or (b == c)):
	print(tt, 'isosceles')
		
elif ((a != b) and (b != c) and (c != a)):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- EXECUTION TIME:
0.158481
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo  de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:44:19) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)
tt= ("Tipo de triangulo")
if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif ((a == b) and (b == c)):
	print(tt, 'equilatero')
		
elif ((a == b) or (b == c)):
	print(tt, 'isosceles')
		
elif ((a != b) and (b != c) and (c != a)):
	print(tt, 'escaleno')
		
else:
	print(tt, 'invalido')
		
 

			
			
    


-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:45:13) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)

if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif ((a == b) and (b == c)):
	print('Tipo  de triangulo: equilatero')
		
elif ((a == b) or (b == c)):
	print('Tipo  de triangulo: isosceles')
		
elif ((a != b) and (b != c) and (c != a)):
	print('Tipo  de triangulo: escaleno')
		
else:
	print('Tipo  de triangulo: invalido')
		
 

			
			
    


-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo  de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:45:27) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)

if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif ((a == b) and (b == c)):
	print('Tipo  de triangulo: equilatero')
		
elif ((a == b) or (b == c)):
	print('Tipo  de triangulo: isosceles')
		
elif ((a != b) and (b != c) and (c != a)):
	print('Tipo  de triangulo: escaleno')
		
else:
	print('Tipo  de triangulo: invalido')
		
 

			
			
    


-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo  de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:45:33) 
-- CODE:
a= float(input("Medida de a: "))
b= float(input("Medida de b: "))
c= float(input("Medida de c: "))
print('Entradas:' ,a, ',', b, ',', c)

if ((a >= b + c) or (b >= a + c) or (c >= a +b)):
	print('Tipo  de triangulo: invalido')
	
elif ((a == b) and (b == c)):
	print('Tipo  de triangulo: equilatero')
		
elif ((a == b) or (b == c)):
	print('Tipo  de triangulo: isosceles')
		
elif ((a != b) and (b != c) and (c != a)):
	print('Tipo  de triangulo: escaleno')
		
else:
	print('Tipo  de triangulo: invalido')
		
 

			
			
    


-- EXECUTION TIME:
0.208188
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo  de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo  de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo  de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
